fixed gap

--- a/app/assets/stylesheets/pages/_chatchannel.scss
+++ b/app/assets/stylesheets/pages/_chatchannel.scss
@@ -43,7 +43,7 @@
   padding-left: 20px;
   display: flex;
   justify-content: space-between;
-  gap: 590px;
+  gap: 620px;
 }
 
 .chat-container {
